Update PlannerAgent LLM to gemini-2.5-pro-preview-05-06 and update comment

--- a/.env.example
+++ b/.env.example
@@ -39,3 +39,8 @@ LOG_LEVEL="INFO"
 
 # Optional: Specify the base directory for toolkits if not standard
 # TOOLKIT_BASE_DIR="./tools"
+# --- Nova Memory MCP Integration ---
+# Required for LTMInterface to connect to the Nova Memory MCP server
+MCP_SERVER_URL="http://localhost:8000"
+MCP_TIMEOUT_SECONDS="30"
+MCP_MAX_RETRIES="3"
